--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -1,1 +1,11 @@
-Test
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>StudentBuddy &mdash; Activiteiten</title>
+</head>
+<body>
+    
+</body>
+</html>
