link to css file

--- a/StudieTips.html
+++ b/StudieTips.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudentBuddy &mdash; Studie Tips</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <a href="index.html">Thuispagina</a><a href="Activiteiten.html">Activiteiten</a><a href="StudieTips.html">Studie Tips</a>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
