--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Thuispagina</a><a href="Activiteiten.html">Activiteiten</a><a href="StudieTips.html">Studie Tips</a>
+        <a href="index.html">Thuispagina</a>
+        <a href="StudieTips.html">Studie Tips</a>
+        <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
     </header>
     <main></main>
     <footer></footer>
