--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudentBuddy</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <a href="index.html">Thuispagina</a>
-        <a href="StudieTips.html">Studie Tips</a>
-        <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
+        <a href="index.html"><img src="Images/logo.png" alt=""></a>
+        <nav>
+            <a href="index.html">Thuispagina</a>
+            <a href="StudieTips.html">Studie Tips</a>
+            <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
+        </nav>
     </header>
     <main></main>
     <footer></footer>
