--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Thuispagina</a>
+        <a href="index.html">Home</a>
         <a href="StudieTips.html">Studie Tips</a>
         <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
     </header>
