--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="Images/logo.png" alt=""></a>
+        <img src="Images/nav.png" id="nav-background">
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logo"></a>
         <nav>
-            <a href="index.html">Thuispagina</a>
+            <a href="index.html">Home</a>
             <a href="StudieTips.html">Studie Tips</a>
             <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
         </nav>
