--- a/StudieTips.html
+++ b/StudieTips.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Home</a>
-        <a href="StudieTips.html">Studie Tips</a>
-        <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
+        <img src="Images/nav.png" id="nav-background">
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logo"></a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="StudieTips.html">Studie Tips</a>
+            <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
+        </nav>
     </header>
     <main></main>
     <footer></footer>
