--- a/StudieTips.html
+++ b/StudieTips.html
@@ -18,6 +18,22 @@
         </nav>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <div class="top-footer">
+            <p>Volg &#35;UCLL op sociale media:</p>
+            <div class="social-media">
+              <a href="#"><i class="bi bi-youtube"></i></a>
+              <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="#"><i class="bi bi-tiktok"></i></a>
+              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="#"><i class="bi bi-twitter-x"></i></a>
+            </div>
+        </div>
+        <div class="copyright-footer">
+            <p>&copy; UCLL &mdash; 2025</p>
+            <a href="#">Cookiebeleid</a><a href="#">Privacyverklaring</a><a href="#">Algemene voorwaarden</a>
+        </div>
+      </footer>
 </body>
 </html>
