--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <div class="top-footer">
             <p>Volg &#35;UCLL op sociale media:</p>
             <div class="social-media">
-                <i class="bi bi-youtube"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-tiktok"></i>
-                <i class="bi bi-linkedin"></i>
-                <i class="bi bi-twitter-x"></i>
+              <a href="#"><i class="bi bi-youtube"></i></a>
+              <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="#"><i class="bi bi-tiktok"></i></a>
+              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="#"><i class="bi bi-twitter-x"></i></a>
             </div>
         </div>
         <div class="copyright-footer">
