--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <div class="top-footer">
             <p>Volg &#35;UCLL op sociale media:</p>
             <div class="social-media">
-              <a href="#"><i class="bi bi-youtube"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-tiktok"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.youtube.com/user/ucleuvenlimburg"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.instagram.com/ucleuvenlimburg/"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.facebook.com/hogeschoolUCLL"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.tiktok.com/@hogeschoolucll"><i class="bi bi-tiktok"></i></a>
+              <a href="https://www.linkedin.com/school/uc-leuven-limburg"><i class="bi bi-linkedin"></i></a>
+              <a href="https://twitter.com/hogeschoolUCLL"><i class="bi bi-twitter-x"></i></a>
             </div>
         </div>
         <div class="copyright-footer">
