--- a/StudieTips.html
+++ b/StudieTips.html
@@ -23,18 +23,20 @@
         <div class="top-footer">
             <p>Volg &#35;UCLL op sociale media:</p>
             <div class="social-media">
-              <a href="https://www.youtube.com/user/ucleuvenlimburg"><i class="bi bi-youtube"></i></a>
-              <a href="https://www.instagram.com/ucleuvenlimburg/"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.facebook.com/hogeschoolUCLL"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.tiktok.com/@hogeschoolucll"><i class="bi bi-tiktok"></i></a>
-              <a href="https://www.linkedin.com/school/uc-leuven-limburg"><i class="bi bi-linkedin"></i></a>
-              <a href="https://twitter.com/hogeschoolUCLL"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.youtube.com/user/ucleuvenlimburg" target="_blank"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/ucleuvenlimburg/" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/hogeschoolUCLL" target="_blank"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.tiktok.com/@hogeschoolucll" target="_blank"><i class="bi bi-tiktok"></i></a>
+                <a href="https://www.linkedin.com/school/uc-leuven-limburg" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://twitter.com/hogeschoolUCLL" target="_blank"><i class="bi bi-twitter-x"></i></a>
             </div>
         </div>
         <div class="copyright-footer">
             <p>&copy; UCLL &mdash; 2025</p>
-            <a href="#">Cookiebeleid</a><a href="#">Privacyverklaring</a><a href="#">Algemene voorwaarden</a>
+            <a href="#" target="_blank">Cookiebeleid</a>
+            <a href="#" target="_blank">Privacyverklaring</a>
+            <a href="#" target="_blank">Algemene voorwaarden</a>
         </div>
-      </footer>
+    </footer>    
 </body>
 </html>
