responsive design footer (javascript)

--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -12,7 +12,8 @@
     <header>
         <img src="Images/nav.png" id="nav-background">
         <a href="index.html"><img src="Images/logo.png" alt="logo" class="logo"></a>
-        <nav>
+        <i class="bi bi-list"></i>
+        <nav class="visible hidden">
             <a href="index.html">Home</a>
             <a href="StudieTips.html">Studie Tips</a>
             <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
@@ -37,6 +38,7 @@
             <a href="#" target="_blank">Privacyverklaring</a>
             <a href="#" target="_blank">Algemene voorwaarden</a>
         </div>
-    </footer>    
+    </footer>
+    <script src="script.js"></script>  
 </body>
 </html>
