--- a/StudieTips.html
+++ b/StudieTips.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
         <img src="Images/nav.png" id="nav-background">
         <a href="index.html"><img src="Images/logo.png" alt="logo" class="logo"></a>
-        <nav>
+        <i class="bi bi-list"></i>
+        <nav class="visible hidden">
             <a href="index.html">Home</a>
             <a href="StudieTips.html">Studie Tips</a>
             <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
@@ -37,6 +39,7 @@
             <a href="#" target="_blank">Privacyverklaring</a>
             <a href="#" target="_blank">Algemene voorwaarden</a>
         </div>
-    </footer>    
+    </footer>
+    <script src="script.js"></script> 
 </body>
 </html>
