--- a/Home.html
+++ b/Home.html
@@ -21,19 +21,20 @@
         </a>
       </div>
       <div class="header_selections">
-        <a href="Home.html">StudieTips</a>
-        <a href="Home.html">Pauze & Onstspanning</a>
+        <a href="Home.html" id="tips">StudieTips</a>
+        <a href="Home.html" id="relax">Pauze & Onstspanning</a>
       </div>
     </header>
     <main>
+      <h1 class="title">StudentBuddy</h1>
       <div class="divmain_box">
         <p class="divmain_box_text">
           Welkom tot de StudentBuddy, je one-stop shop voor hulp bij je
           studies!<br />
           <br />
-          In de navigatiebar bovenaan kan je de volgende pagina’s vinden:<br />
+          In de navigatiebar bovenaan kan je de volgende pagina’s vinden:<br /><br />
           • Studietips: Hier kan je verschillende handige tips vinden voor
-          efficiënter te studeren zoals het maken van een goede planning.<br />
+          efficiënter te studeren zoals het maken van een goede planning.<br /><br />
           • Activiteiten: Nood aan ontspanning na of tussen het studeren door?
           Je vindt hier verschillende leuke activiteiten, zoals een quiz en een
           leuke video voor je motivatie terug op te wekken.
