--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="Images/nav.png" id="nav-background">
-        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="Images/StudentBuddy_Logo_Wit.png" alt="logo" class="logo"></a>
         <i class="bi bi-list"></i>
         <nav class="visible hidden">
             <a href="index.html">Home</a>
