--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -16,7 +16,7 @@
         <nav class="visible hidden">
             <a href="index.html">Home</a>
             <a href="StudieTips.html">Studie Tips</a>
-            <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
+            <a class="current-page" href="Activiteiten.html">Pauze &#38; ontspanning</a>
         </nav>
     </header>
     <main></main>
