--- a/StudieTips.html
+++ b/StudieTips.html
@@ -17,7 +17,7 @@
         <i class="bi bi-list"></i>
         <nav class="visible hidden">
             <a href="index.html">Home</a>
-            <a href="StudieTips.html">Studie Tips</a>
+            <a class="current-page" href="StudieTips.html">Studie Tips</a>
             <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
         </nav>
     </header>
