--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a href="index.html"><img src="Images/StudentBuddy_Logo_Wit.png" alt="logo" class="logo"></a>
 			<i class="bi bi-list"></i>
 			<nav class="visible hidden">
-				<a href="index.html">Home</a>
+				<a class="current-page" href="index.html">Home</a>
 				<a href="StudieTips.html">Studie Tips</a>
 				<a href="Activiteiten.html">Pauze &#38; ontspanning</a>
 			</nav>
