--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="activiteit.css" />
+    <link rel="stylesheet" href="Activiteiten.css" />
   </head>
   <body>
     <header>
