--- a/index.html
+++ b/index.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
 <html lang="nl">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>StudentBuddy</title>
-		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<header>
-			<img src="Images/nav.png" id="nav-background">
-			<a href="index.html"><img src="Images/StudentBuddy_Logo_Wit.png" alt="logo" class="logo"></a>
-			<i class="bi bi-list"></i>
-			<nav class="hidden">
-				<a class="current-page" href="index.html">Home</a>
-				<a href="StudieTips.html">Studie Tips</a>
-				<a href="Activiteiten.html">Pauze &#38; ontspanning</a>
-			</nav>
-		</header>
-		<main>
-			<div class="divmain_box">
-				<p class="divmain_box_text">
-					Welkom tot de StudentBuddy, je one-stop shop voor hulp bij je
-					studies!<br />
-					<br />
-					In de navigatiebar bovenaan kan je de volgende pagina’s vinden:<br />
-					• Studietips: Hier kan je verschillende handige tips vinden voor
-					efficiënter te studeren zoals het maken van een goede planning.<br />
-					• Activiteiten: Nood aan ontspanning na of tussen het studeren door?
-					Je vindt hier verschillende leuke activiteiten, zoals een quiz en een
-					leuke video voor je motivatie terug op te wekken.
-				</p>
-			</div>
-			<!--<img
-				src="https://www.ucll.be/sites/default/files/2022-04/img_6009.jpg"
-				alt="UCLL Campus"
-				width="512"
-				height="512"
-				class="divmain_image"
-				/>-->
-			
-		</main>
-		<footer>
-			<div class="top-footer">
-				<p>Volg &#35;UCLL op sociale media:</p>
-				<div class="social-media">
-					<a href="https://www.youtube.com/user/ucleuvenlimburg" target="_blank"><i class="bi bi-youtube"></i></a>
-					<a href="https://www.instagram.com/ucleuvenlimburg/" target="_blank"><i class="bi bi-instagram"></i></a>
-					<a href="https://www.facebook.com/hogeschoolUCLL" target="_blank"><i class="bi bi-facebook"></i></a>
-					<a href="https://www.tiktok.com/@hogeschoolucll" target="_blank"><i class="bi bi-tiktok"></i></a>
-					<a href="https://www.linkedin.com/school/uc-leuven-limburg" target="_blank"><i class="bi bi-linkedin"></i></a>
-					<a href="https://twitter.com/hogeschoolUCLL" target="_blank"><i class="bi bi-twitter-x"></i></a>
-				</div>
-			</div>
-			<div class="copyright-footer">
-				<p>&copy; UCLL &mdash; 2025</p>
-				<a href="#" target="_blank">Cookiebeleid</a>
-				<a href="#" target="_blank">Privacyverklaring</a>
-				<a href="#" target="_blank">Algemene voorwaarden</a>
-			</div>
-		</footer>
-    <script src="script.js"></script>      
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>StudentBuddy</title>
+    <link rel="stylesheet" href="normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <img src="Images/nav.png" id="nav-background" />
+      <a href="index.html"
+        ><img src="Images/StudentBuddy_Logo_Wit.png" alt="logo" class="logo"
+      /></a>
+      <i class="bi bi-list"></i>
+      <nav class="visible hidden">
+        <a href="index.html">Home</a>
+        <a href="StudieTips.html">StudieTips</a>
+        <a href="Activiteiten.html">Pauze &#38; Ontspanning</a>
+      </nav>
+    </header>
+    <main>
+      <div class="divmain_box">
+        <p class="divmain_box_text">
+          Welkom tot de StudentBuddy, je one-stop shop voor hulp bij je
+          studies!<br />
+          <br />
+          In de navigatiebar bovenaan kan je de volgende pagina’s vinden:<br /><br />
+          Studietips<br />Hier kan je verschillende handige tips vinden voor
+          efficiënter te studeren zoals het maken van een goede planning.<br /><br />
+          Pauze &#38; Ontspanning<br />Nood aan ontspanning na of tussen het
+          studeren door? Je vindt hier verschillende leuke activiteiten, zoals
+          een quiz en een leuke video voor je motivatie terug op te wekken.
+        </p>
+      </div>
+    </main>
+    <footer>
+      <div class="top-footer">
+        <p>Volg &#35;UCLL op sociale media:</p>
+        <div class="social-media">
+          <a href="https://www.youtube.com/user/ucleuvenlimburg" target="_blank"
+            ><i class="bi bi-youtube"></i
+          ></a>
+          <a href="https://www.instagram.com/ucleuvenlimburg/" target="_blank"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a href="https://www.facebook.com/hogeschoolUCLL" target="_blank"
+            ><i class="bi bi-facebook"></i
+          ></a>
+          <a href="https://www.tiktok.com/@hogeschoolucll" target="_blank"
+            ><i class="bi bi-tiktok"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/school/uc-leuven-limburg"
+            target="_blank"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <a href="https://twitter.com/hogeschoolUCLL" target="_blank"
+            ><i class="bi bi-twitter-x"></i
+          ></a>
+        </div>
+      </div>
+      <div class="copyright-footer">
+        <p>&copy; UCLL &mdash; 2025</p>
+        <a href="#" target="_blank">Cookiebeleid</a>
+        <a href="#" target="_blank">Privacyverklaring</a>
+        <a href="#" target="_blank">Algemene voorwaarden</a>
+      </div>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
