--- a/StudieTips.html
+++ b/StudieTips.html
@@ -25,66 +25,68 @@
         <h1>Taloze studietips om te slagen!</h1>
         <section class="studietips">
             <article>
-                <img>
                 <h2>Maak een planning</h2>
+                <img src="images_studietips/planning.jpeg" alt="">
                 <p>Voorkom last-minute stress met een realistisch schema. Verdeel grote taken in kleinere stukken en stel prioriteiten. Gebruik een planner of app om je vooruitgang bij te houden. Plan ook tijd in voor herhaling.</p>
             </article>
             <article>
-                <img>
                 <h2>Gebruik actieve leermethoden</h2>
+                <img src="images_studietips/learn_methode.jpeg" alt="">
                 <p>Leer effectiever door samenvattingen, mindmaps of oefenvragen. Leg de stof uit aan iemand anders om je begrip te verdiepen. Actief bezig zijn helpt bij beter onthouden.</p>
             </article>
             <article>
-                <img>
                 <h2>Neem regelmatig pauzes</h2>
+                <img src="images_studietips/stretching.jpeg" alt="">
                 <p>Studeren zonder pauzes verlaagt je concentratie. Gebruik de Pomodoro-techniek: 25 minuten studeren, 5 minuten pauze. Na vier sessies neem je een langere pauze. Dit voorkomt mentale vermoeidheid.</p>
             </article>
             <article>
-                <img>
                 <h2>Zorg voor een rustige studieomgeving</h2>
+                <img src="images_studietips/study_environment.jpeg" alt="">
                 <p>Vermijd afleidingen zoals je telefoon of lawaai en zorg voor een opgeruimde werkplek. Een rustige omgeving helpt je om beter gefocust te blijven.</p>
             </article>
             <article>
-                <img>
                 <h2>Test jezelf regelmatig</h2>
+                <img src="images_studietips/test_yourself.jpeg" alt="">
                 <p>Maak oefenvragen of gebruik flashcards om je kennis te testen. Dit helpt je om zwakke plekken te identificeren en beter voorbereid te zijn op examens.</p>
             </article>
             <article>
-                <img>
                 <h2>Gebruik een agenda</h2>
+                <img src="images_studietips/agenda.jpeg" alt="">
                 <p>De belangrijkste tip van allemaal: gebruik een agenda! Het maakt niet uit of het een papieren of digitale agenda is. Plan je colleges en werkgroepen erin, je sociale activiteiten en sport, je deadlines. Als je alle activiteiten erin zet krijg je een goed overzicht. Dat geeft rust in je hoofd en je bent je er sneller van bewust wanneer je echt moet beginnen met studeren, schrijven, etc. Als je de agenda ook voor de leuke activiteiten gebruikt wordt je agenda ook wat minder snel negatief beladen.</p>
             </article>
             <article>
-                <img>
                 <h2>Routine is key</h2>
+                <img src="images_studietips/routine.jpeg" alt="">
                 <p>Hoe duidelijker je wekelijkse routine is, hoe normaler het is om op bepaalde dagen en tijden te studeren. Dan hoef je niet steeds jezelf op wilskracht naar de bieb te slepen, maar kun je die energie gebruiken om daadwerkelijk te studeren.
                    Probeer je studieritme aan te passen aan je bioritme: ben je een ochtend- of avondmens? Stem daar je studieplanning voor zover als mogelijk op af.</p>
             </article>
             <article>
-                <img>
                 <h2>Studeer samen</h2>
+                <img src="images_studietips/study_together.jpeg" alt="">
                 <p>Het kan helpen om met iemand af te spreken om samen te studeren. Je vergroot de kans dat je daadwerkelijk gaat studeren, je houdt elkaar bij de les tijdens het studeren en het is gezelliger tijdens de pauzes. Leg de stof ook eens uit aan medestudenten of vrienden.</p>
             </article>
             <article>
-                <img>
                 <h2>Maak aantekeningen tijdens college</h2>
+                <img src="images_studietips/school_notes.jpeg" alt="">
                 <p>Blijf tijdens colleges bij de les door aantekeningen te maken. Probeer de docent niet bij te houden en alles op te schrijven, maar maak bijvoorbeeld een mindmap. Als de docent de PowerPoint van tevoren online zet, print deze dan uit, of zet ze op je laptop om makkelijk extra aantekeningen te maken bij het college.</p>
             </article>
             <article>
-                <img>
                 <h2>Overhoor jezelf</h2>
+                <img src="images_studietips/interrogate_yourself.jpeg" alt="">
                 <p>Door jezelf tijdens het studeren vragen te stellen neem je de stof makkelijker op. Bekijk bijvoorbeeld oude tentamens en bedenk tijdens het studeren soortgelijke vragen over de stof die je bestudeert.</p>
             </article>
             <article>
-                <img>
                 <h2>Als je er niet alleen uit komt, zoek dan hulp!</h2>
+                <img src="images_studietips/ask_for_help.jpeg" alt="">
                 <p>Er worden verschillende trainingen aangeboden voor mensen die moeite hebben met studeren. Bekijk ons actuele aanbod van trainingen en groepen. Als je twijfels hebt over je studiekeuze, je studieplanning of andere studie-gerelateerde zaken kun je ook een afspraak met de studieadviseur maken. Klik hier voor een overzicht van de contactgegevens van de studieadviseurs per faculteit.</p>
             </article>
+            <!--
             <article>
                 <img>
                 <h2>Maak aantekeningen tijdens college</h2>
                 <p></p>
             </article>
+            -->
 
         </section>
     </main>
