--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      href="https://play-lh.googleusercontent.com/boesRPJmAZ3vdnwJ8GoDeARfS8sNtlpauyf1ItY-476Vse3rq3WjCytPWeNMq8ut8p8"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
