current-page re

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       /></a>
       <i class="bi bi-list"></i>
       <nav class="visible hidden">
-        <a href="index.html">Home</a>
+        <a class="current-page" href="index.html">Home</a>
         <a href="StudieTips.html">StudieTips</a>
         <a href="Activiteiten.html">Pauze &#38; Ontspanning</a>
       </nav>
