Activiteiten - Adding css and html

--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -37,6 +37,7 @@
           hoofd leeg te maken. Een wandeling van 10 tot 15 minuten helpt je om
           stress los te laten en je beter te voelen.
         </p>
+        <img src="images/wandeling.gif" alt="Korte wandeling GIF" class="activity-gif" />
       </article>
 
       <article>
@@ -46,6 +47,7 @@
           uitlaatklep zijn voor stress. Het helpt je gedachten te verzetten en
           je creativiteit te stimuleren.
         </p>
+        <img src="images/creatief.gif" alt="Creatief bezig zijn GIF" class="activity-gif" />
       </article>
 
       <article>
@@ -55,6 +57,7 @@
           rustgevende muziek of je favoriete nummers kan helpen om spanning te
           verminderen en je stemming te verbeteren.
         </p>
+        <img src="images/muziek.gif" alt="Luisteren naar muziek GIF" class="activity-gif" />
       </article>
 
       <article>
@@ -64,6 +67,7 @@
           om vastzittende spanning los te laten. Dit zorgt voor een betere
           doorbloeding en een ontspannen gevoel.
         </p>
+        <img src="images/yoga.gif" alt="Stretching of lichte yoga GIF" class="activity-gif" />
       </article>
 
       <article>
@@ -73,6 +77,7 @@
           voeding en voldoende hydratatie helpen je lichaam en geest optimaal te
           functioneren.
         </p>
+        <img src="images/creatief.gif" alt="Hydratatie of snackpauze GIF" class="activity-gif" />
       </article>
     </main>
     </div>
