--- a/StudieTips.html
+++ b/StudieTips.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudentBuddy &mdash; Studie Tips</title>
-    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Studietips.css">
     <script src="script.js"></script>
 
 </head>
