link in studietip

--- a/StudieTips.html
+++ b/StudieTips.html
@@ -78,7 +78,7 @@
             <article>
                 <h2>Als je er niet alleen uit komt, zoek dan hulp!</h2>
                 <img src="images_studietips/ask_for_help.jpeg" alt="">
-                <p>Er worden verschillende trainingen aangeboden voor mensen die moeite hebben met studeren. Bekijk ons actuele aanbod van trainingen en groepen. Als je twijfels hebt over je studiekeuze, je studieplanning of andere studie-gerelateerde zaken kun je ook een afspraak met de studieadviseur maken. Klik hier voor een overzicht van de contactgegevens van de studieadviseurs per faculteit.</p>
+                <p>Er worden verschillende trainingen aangeboden voor mensen die moeite hebben met studeren. Bekijk ons actuele aanbod van trainingen en groepen. Als je twijfels hebt over je studiekeuze, je studieplanning of andere studie-gerelateerde zaken kun je ook een afspraak met de studieadviseur maken. <a href="https://www.ucll.be/nl/studeren-aan-ucll/diensten-voor-studenten/begeleiding" target="_blank">Klik hier</a> voor een overzicht van de contactgegevens van de studieadviseurs per faculteit.</p>
             </article>
             <!--
             <article>
