--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -77,7 +77,7 @@
           voeding en voldoende hydratatie helpen je lichaam en geest optimaal te
           functioneren.
         </p>
-        <img src="images/creatief.gif" alt="Hydratatie of snackpauze GIF" class="activity-gif" />
+        <img src="images/snack.gif" alt="Hydratatie of snackpauze GIF" class="activity-gif" />
       </article>
     </main>
     </div>
