--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -23,7 +23,7 @@
         <a href="index.html">Home</a>
         <a href="StudieTips.html">Studie Tips</a>
         <a class="current-page" href="Activiteiten.html"
-          >Pauze &#38; ontspanning</a
+          >Pauze &#38; Ontspanning</a
         >
       </nav>
     </header>
