--- a/StudieTips.html
+++ b/StudieTips.html
@@ -23,7 +23,7 @@
       <nav class="hidden">
         <a href="index.html">Home</a>
         <a class="current-page" href="StudieTips.html">Studie Tips</a>
-        <a href="Activiteiten.html">Pauze &#38; ontspanning</a>
+        <a href="Activiteiten.html">Pauze &#38; Ontspanning</a>
       </nav>
     </header>
     <main>
